[package]
name = "rusty-sorter"
version = "0.1.1"
edition = "2021"
authors = ["Obscurely <adrian.obscurely@protonmail.com>"]
rust-version = "1.62"                                                                            # Minimal rust version, should work with older versions, but for compatibility this is the one I used.
description = "An open source, fast, simple yet efficient file sorter with recursive capabilities!"
documentation = "https://github.com/Obscurely/rustysorter"
repository = "https://github.com/Obscurely/rustysorter"
homepage = "https://github.com/Obscurely/rustysorter"
categories = ["command-line-utilities"]
keywords = ["cli", "fast", "open-source", "simple", "efficient"]
readme = "README.md"
license = "GPL-3.0-only"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3     # Optimize for speed.
lto = true        # instructs the linker to optimize at the link stage
codegen-units = 1 # Default is 16, the higher the faster compile time, but it may produce slower code.

[dependencies]
walkdir = "2.3.2"
itertools = "0.10.3"
argparse = "0.2.2"
